@@ -1,3 +1,9 @@
+2007-07-03  David Kastrup  <dak@gnu.org>
+
+	* shell.el: On request of the authors, remove their addresses for
+	the sake of bug reports, and add the developer list address as
+	maintainer information.
+
 2007-07-03  Richard Stallman  <rms@gnu.org>
 
 	* files.el (make-directory): Doc fix.
